<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/functionalities">

        <item
            android:id="@+id/tutorial"
            android:title="@string/app_tutorial"/>
        <item
            android:id="@+id/appointment"
            android:title="@string/book_appointment"/>
        <item
            android:id="@+id/emergency"
            android:title="@string/emergency_call"/>
        <item
            android:id="@+id/familyDr"
            android:title="Call Family Doctor"
            android:icon="@drawable/baseline_call_24"
            app:showAsAction="always"/>
    </group>
    <group
        android:id="@+id/user">
        <item
            android:id="@+id/logout"
            android:title="@string/logout"/>
        <item
            android:id="@+id/problem"
            android:title="@string/report_a_problem"/>
    </group>
</menu>