<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group>

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>

<!--        <item-->
<!--            android:id="@+id/nav_track_parcel"-->
<!--            android:icon="@drawable/baseline_gps_fixed_24"-->
<!--            android:title="@string/track_your_parcel"/>-->

<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/baseline_settings_24"-->
<!--            android:title="@string/settings"/>-->

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/logout"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/version"
                android:title="@string/v1_0_0"
                android:icon="@drawable/baseline_workspace_premium_24"/>
        </menu>

    </item>

</menu>