<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background">

    <ImageView
        android:id="@+id/bottomSheetLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/toolbar_logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/introLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetLogo"
        app:layout_constraintBottom_toTopOf="@id/chatLayout">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/how_can_we_help"
            android:padding="8dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_clear_24"
            app:layout_constraintStart_toEndOf="@id/createText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cancelButton"
            android:contentDescription="@string/logout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chatLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introLayout"
        app:layout_constraintBottom_toTopOf="@id/videoCallLayout"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/bottomSheetChatImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_chat_bubble_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bottomSheetChatText"
            android:contentDescription="@string/logout"/>
        <TextView
            android:id="@+id/bottomSheetChatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_with_an_expert"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/bottomSheetChatImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/videoCallLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatLayout"
        app:layout_constraintBottom_toTopOf="@id/chatBotLayout"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/bottomSheetVCImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_voice_chat_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bottomSheetVCText"
            android:contentDescription="@string/logout"/>
        <TextView
            android:id="@+id/bottomSheetVCText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_a_video_call"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/bottomSheetVCImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chatBotLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoCallLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/bottomSheetChatBotImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_adb_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bottomSheetChatBotText"
            android:contentDescription="@string/logout"/>
        <TextView
            android:id="@+id/bottomSheetChatBotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_to_a_chatbot"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/bottomSheetChatBotImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>