<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="150dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/dialogImage"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/dialogTitle"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_tutorial"/>

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogImage"
                app:layout_constraintBottom_toTopOf="@id/dialogDescription"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dialogDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_wish_to_leave_the_app"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/dialogTitle"
                app:layout_constraintBottom_toTopOf="@id/dialogYesBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/dialogYesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:shadowColor="@color/white"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="10"
                android:text="Yes"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dialogNoBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDescription"
                app:rippleColor="#07FF00" />

            <Button
                android:id="@+id/dialogNoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:shadowColor="@color/white"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="10"
                android:text="No"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dialogYesBtn"
                app:layout_constraintTop_toBottomOf="@id/dialogDescription"
                app:rippleColor="#FF0000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>